Back out of virtual threads
clojure.lang.Reflector is internal and shouldn't be used. We'll allow
users to pass a :thread-pool option instead.